<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loading"
    android:layout_width="@dimen/alert_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/custom_image"
        android:layout_width="83dp"
        android:layout_height="83dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:visibility="gone"
        tools:src="@drawable/no_image_full"
        tools:visibility="visible"/>

    <FrameLayout
        android:id="@+id/error_frame"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginTop="5dp"
        tools:visibility="visible"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/error_circle" />

        <ImageView
            android:id="@+id/error_x"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/error_center_x" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/success_frame"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        tools:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/success_bow" />

        <View
            android:id="@+id/mask_right"
            android:layout_width="35dp"
            android:layout_height="80dp"
            android:layout_gravity="end"
            android:layout_marginTop="-13dp"
            android:background="@android:color/white" />

        <View
            android:id="@+id/mask_left"
            android:layout_width="21dp"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:layout_marginStart="-3dp"
            android:background="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/success_circle" />

        <b.laixuantam.myaarlibrary.widgets.dialog.alert.SuccessTickView
            android:id="@+id/success_tick"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/warning_frame"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        tools:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/warning_circle" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/warning_sigh" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/progress_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="9dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <b.laixuantam.myaarlibrary.widgets.dialog.alert.progressx.ProgressWheel
            android:id="@+id/progressWheel"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            wheel:matProg_progressIndeterminate="true" />
    </FrameLayout>

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        tools:text="@string/dialog_default_title"
        android:textStyle="bold"
        android:textColor="@color/alert_dialog_color_text_title"
        android:textSize="19sp"
        android:visibility="gone"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/content_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textAlignment="center"
        tools:text="Dialog content"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:visibility="gone"
        tools:visibility="visible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/cancel_button"
            style="@style/dialog_button"
            android:layout_marginEnd="10dp"
            android:background="@drawable/alert_dialog_button_cancel_bg"
            android:text="@string/dialog_cancel"
            android:textColor="@color/white"
            android:visibility="gone"
            android:textStyle="bold"
            tools:visibility="visible"/>

        <Button
            android:id="@+id/custom_confirm_button"
            style="@style/dialog_button"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/alert_dialog_button_confirm_bg"
            android:text="@string/dialog_ok" />
    </LinearLayout>
</LinearLayout>